--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,12 @@
         <h3>{{pelicula.precio | currency}}</h3>
       </div> -->
 
-    <app-heroes-list>
-    </app-heroes-list>
 
 
+    <!-- <app-heroes-list>
+    </app-heroes-list> -->
+
+    <app-operas-bas/>
 
     <router-outlet />
   </div>
