--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,10 @@
     <!-- <app-heroes-list>
     </app-heroes-list> -->
 
-    <app-operas-bas/>
+    <app-resistencia-angular/>
+
+     <!-- <app-cinepolis/> -->
+   <!--  <app-operas-bas/> -->
 
     <router-outlet />
   </div>
