--- a/src/app/formularios/resistencia-angular/resistencia-angular.component.html
+++ b/src/app/formularios/resistencia-angular/resistencia-angular.component.html
@@ -1,47 +1,78 @@
-<!-- <p>resistencia-angular works!</p> -->
+<h1>Resistencia</h1>
 
-<div class="calculadora-resistencia d-flex flex-wrap justify-content-between">
-    <h1>Calculadora de Resistencias</h1>
-    <div class="bandas d-flex flex-wrap w-100">
-        <div class="col-sm-12 col-md-4 mb-3">
-            <label>1ra. Banda</label>
-            <input type="text" class="form-control">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-        </div>
-        <div class="col-sm-12 col-md-4 mb-3">
-            <label>2da. Banda</label>
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-        </div>
-        <div class="col-sm-12 col-md-4 mb-3">
-            <label>3ra. Banda Multiplicador</label>
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-        </div>
+<div style="display: flex; margin-bottom: 20px; justify-content: center;">
+  <div>
+    <label>1ra. Banda</label>
+    <div *ngFor="let color of colorBase">
+
+      <input type="radio" [(ngModel)]="color1" [value]="color.nombre" name="color1">
+      <p [style.backgroundColor]="color.color" style="padding: 4px 8px; display: inline-block; margin: 2px; color: white;">
+        ({{ color.valor }})
+      </p>
     </div>
+  </div>
+
+  <div>
+    <label>2da. Banda</label>
+    <div *ngFor="let color of colorBase">
+
+      <input type="radio" [(ngModel)]="color2" [value]="color.nombre" name="color2">
+      <p [style.backgroundColor]="color.color" style="padding: 4px 8px; display: inline-block; margin: 2px; color: white;">
+        ({{ color.valor }})
+      </p>
+    </div>
+  </div>
+
+  <div>
+    <label>3ra. Banda Multiplicador</label>
+    <div *ngFor="let multi of multiplicadores">
+
+      <input type="radio" [(ngModel)]="color3" [value]="multi.nombre" name="color3">
+      <p [style.backgroundColor]="multi.color" style="padding: 4px 8px; display: inline-block; margin: 2px; color: white;">
+        (x{{ multi.valor }})
+      </p>
+    </div>
+  </div>
 </div>
+
+
+<div style="margin-bottom: 20px; text-align: center;">
+  <label>Tolerancia</label>
+  <div *ngFor="let tole of tolerancias">
+
+    <input type="radio" [(ngModel)]="tolerancia" [value]="tole.nombre" name="tolerancia">
+    <p [style.backgroundColor]="tole.color" style="padding: 4px 8px; display: inline-block; margin: 2px; color: white;">
+      {{ tole.nombre }} ({{ tole.valor * 100 }}%)
+    </p>
+  </div>
+</div>
+
+<div style="text-align: center; margin-bottom: 20px;">
+<button  (click)="calcular()">Calcular</button>
+</div>
+
+<h1>...................................................................................................................................</h1>
+<table *ngIf="mostrarTabla" style="width: 100%; text-align: center; margin-top: 20px; border-collapse: collapse;">
+  <thead>
+    <tr>
+      <th>Color1</th>
+      <th>Color2</th>
+      <th>Color3</th>
+      <th>Tolerancia</th>
+      <th>Valor (Ohms)</th>
+      <th>Valor Máximo</th>
+      <th>Valor Mínimo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td [style.backgroundColor]="pintar(color1)">{{ color1 }}</td>
+      <td [style.backgroundColor]="pintar(color2)">{{ color2 }}</td>
+      <td [style.backgroundColor]="pintar(color3)">{{ color3 }}</td>
+      <td [style.backgroundColor]="pintar(tolerancia)">{{ tolerancia }}</td>
+      <td>{{ resultado }}</td>
+      <td>{{ maximo }}</td>
+      <td>{{ minimo }}</td>
+    </tr>
+  </tbody>
+</table>
